--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,14 +7,13 @@
 </head>
 <body>
 <h1>Design your taco!</h1>
-<img th:src="@{/images/TacoImage.png}"/>
+<img th:src="@{/images/Taco.png}"/>
 <form method="POST" th:object="${design}">
     <div class="grid">
         <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
             <div th:each="ingredient : ${wrap}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
